2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix mistakes in db_pytis_menu.py.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Use locking pytis_update_summary_rights db function.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Make inner join of a_pytis_computed_summary_rights in ev_pytis_user_menu.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* doc/tutorials/DmpDb:
	Don't call pytis_update_summary_rights in triggers.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Add on-fly menu preview to the role editing form.

2009-10-08  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix role specific summary rights computation.

2009-10-07  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Initial implementation of on-fly computed summary access rights.

2009-10-07  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/dualform.py:
	* lib/pytis/form/form.py:
	* lib/pytis/form/list.py:
	* lib/pytis/presentation/spec.py:
	Allow side form binding by table function arguments.

2009-10-06  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/dbdata.py:
	* lib/pytis/data/postgresql.py:
	Basic support for table functions in the database.

2009-10-05  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Amend: yes.
	Split pytis_update_summary_rights to computational and storage parts
	
	

2009-10-05  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Split pytis_update_summary_rights to computational and storage parts.

2009-10-02  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Amend: yes.
	Fixes in redundant rights recognition
	

2009-10-02  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fix in redundant rights recognition.

2009-10-02  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py: